fix scrollbar flicker on load

--- a/packages/extension/src/index.css
+++ b/packages/extension/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -22,4 +23,8 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+#root {
+  overflow: hidden;
 }
